    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. HttpUnit does not support JavaScript
    2. JDK 1.2 or higher is required
    3. ServletUnit does not support JSP


Revision History:
17-Jun-2002
Acknowledgements:
    Thanks to Robert Watkins for the content length test.

Additions:
    1. An IO exception is thrown if the content length does not match the actual received length for a response and
       content-length checking is enabled.

21-May-2002
Correction:
    1. ServletUnit supports urls beginning with "/servlet/" as referring to a servlet class name if not mapped to anything else.

20-May-2002
Additions:
    1. ServletUnitHttpRequest now implements getInputStream and getContentType.

16-May-2002
Acknowledgements:
    Thanks to James Murty for adding caching of servlet instances and some XML parsing cleanup.

Additions:
    1. ServletUnit now caches its servlet instances so that multiple invocations can use the same instance.  This more
       closely matches the servlet spec.
    2. Leading and trailing spaces in web.xml text nodes are now ignored.
    3. If no other mapping matches a servlet name in a URL, ServletUnit will try to treat it as a servlet class name.
       This means that you can use something like http://localhost/com.nowhere.MyServlet to access your servlet without
       explicitly registering it.

14-May-2002
Additions:
    1. A <select> control with a size attribute may now have its value undefined. The specification does not require
       this behavior, but both IE 5.5 and Netscape 6.2 do this.
    2. WebResponse.getForms now caches its result so that multiple calls will return the same set of objects.
    3. WebClient.sendRequest is now available as an alias for WebRequest.getResponse

 9-May-2002
Acknowledgements: